Update package.json to include data folder in build
- Added `extraFiles` configuration to include the `data` folder in the build output.
- This ensures that the `data` folder, containing essential files like `tags.txt`, is correctly packaged with the application during the build process.
- The `data` folder will now be placed in the root directory of the built application, making it accessible at runtime.

--- a/package.json
+++ b/package.json
@@ -15,15 +15,33 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "build/SCLS.ico"
+      "icon": "build/SCLS.ico",
+      "extraFiles": [
+        {
+          "from": "data",
+          "to": "data"
+        }
+      ]
     },
     "mac": {
       "target": "dmg",
-      "icon": "build/SCLS.ico"
+      "icon": "build/SCLS.ico",
+      "extraFiles": [
+        {
+          "from": "data",
+          "to": "data"
+        }
+      ]
     },
     "linux": {
       "target": "AppImage",
-      "icon": "build/SCLS.ico"
+      "icon": "build/SCLS.ico",
+      "extraFiles": [
+        {
+          "from": "data",
+          "to": "data"
+        }
+      ]
     },
     "extraResources": [
       {
