--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stelicas",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Stelicas (Steam Library Categories Scraper) - A tool to scrape and organize Steam library categories.",
   "main": "src/main.js",
   "scripts": {
@@ -42,25 +42,7 @@
           "to": "data"
         }
       ]
-    },
-    "extraResources": [
-      {
-        "from": "node_modules/level",
-        "to": "app/node_modules/level"
-      },
-      {
-        "from": "node_modules/level-supports",
-        "to": "app/node_modules/level-supports"
-      },
-      {
-        "from": "node_modules/level-transcoder",
-        "to": "app/node_modules/level-transcoder"
-      },
-      {
-        "from": "node_modules/abstract-level",
-        "to": "app/node_modules/abstract-level"
-      }
-    ]
+    }
   },
   "keywords": [
     "Steam",
@@ -79,10 +61,8 @@
     "electron-store": "^8.1.0",
     "iconv-lite": "^0.6.3",
     "level": "^9.0.0",
-    "level-supports": "^6.2.0",
-    "level-transcoder": "^1.0.1",
-    "abstract-level": "^1.0.0",
-    "ps-list": "^8.1.0"
+    "ps-list": "^8.1.0",
+    "winreg": "^1.2.4"
   },
   "devDependencies": {
     "@electron/packager": "^18.3.6",
